Removed / deprecate illegal reflective access.